name:                fingerd
version:             0.1.0.0
description:         A finger daemon. The final project from the book Haskell Programming from first principles
homepage:            https://github.com/robertjlooby/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Looby
maintainer:          robertjlooby@gmail.com
copyright:           2017 Robert Looby
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable add-user
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             AddUser.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , raw-strings-qq
                     , sqlite-simple
                     , text

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text

executable modify-user
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             ModifyUser.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , raw-strings-qq
                     , sqlite-simple
                     , text
